Modify git ignore

--- a/Praca_Inzynierska.tex
+++ b/Praca_Inzynierska.tex
@@ -248,6 +248,9 @@
       \item poprawne zinterpretowanie zdań brzmiących w bardzo podobny sposób, ale
       oznaczających zupełnie różne rzeczy
     \end{itemize} 
+    Dodatkowo, różne języki mają różną gramatyczną strukturę, co dodatkowo utrudnia
+    stworzenie zunifikowanego systemu, zdolnego do przetwarzania wielu języków w 
+    podobny sposób.
 
 
   }
