--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -43,3 +43,9 @@
   title = "A short history of speech recognition",
   url = "https://sonix.ai/history-of-speech-recognition"
 }
+@article{speech_article,
+  author = "Navdeep Jaitly, Patrick Nguyen, Andrew Senior, Vincent Vanhoucke",
+  title = "Application of Pretrained Deep Neural Networks 
+          to Large Vocabulary Speech Recognition",
+  url = "https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/38130.pdf"
+}
