--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -3,7 +3,7 @@
   title = "Nie za krótkie wprowadzenie do systemu \LaTeX2e, dostępny online.",
   year = 2007
 }
-@article{cal,
+@online{cal,
   author = "Abdallah Ismail",
   title = "How many calories should I eat a day?",
   url = "https://www.researchgate.net/publication/324943266_How_many_calories_should_I_eat_a_day"
@@ -49,3 +49,13 @@
           to Large Vocabulary Speech Recognition",
   url = "https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/38130.pdf"
 }
+@article{markov_article,
+  author = "L. R. Rabiner",
+  title = "An Introduction to Hidden Markov Models",
+  url = "http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.957.202&rep=rep1&type=pdf"
+}
+@online{fourier,
+  title = "Fast Fourier Transformation FFT - Basics",
+  url = "https://www.nti-audio.com/en/support/know-how/fast-fourier-transform-fft"
+}
+https://www.globalme.net/blog/how-does-speech-recognition-technology-work/
