--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -58,4 +58,13 @@
   title = "Fast Fourier Transformation FFT - Basics",
   url = "https://www.nti-audio.com/en/support/know-how/fast-fourier-transform-fft"
 }
+@online{microservices,
+  title = "What are microservices?",
+  url = "https://microservices.io/"
+}
+@online{rest,
+  author = "Microsoft",
+  title = "Projekt internetowego interfejsu API",
+  url = "https://docs.microsoft.com/pl-pl/azure/architecture/best-practices/api-design"
+}
 https://www.globalme.net/blog/how-does-speech-recognition-technology-work/
