--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -67,4 +67,8 @@
   title = "Projekt internetowego interfejsu API",
   url = "https://docs.microsoft.com/pl-pl/azure/architecture/best-practices/api-design"
 }
+@online{funk-niefunk,
+  title = "Klasyfikacja wymagań",
+  url = "http://zasoby.open.agh.edu.pl/~10sdczerner/page/klasyfikacja_wymagan.html"
+}
 https://www.globalme.net/blog/how-does-speech-recognition-technology-work/
