--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -71,4 +71,8 @@
   title = "Klasyfikacja wymagań",
   url = "http://zasoby.open.agh.edu.pl/~10sdczerner/page/klasyfikacja_wymagan.html"
 }
+@online{oracle-db,
+  title = "Types of databases",
+  url = "https://www.oracle.com/database/what-is-database/#link5"
+}
 https://www.globalme.net/blog/how-does-speech-recognition-technology-work/
